# slot_machine

./: CMakeLists.txt  Makefile  README.md
cmake/: utils.cmake  warnings.cmake
cmake/toolchains/: x86_64-w64-mingw32.cmake
src/: audioplayer.cpp  audioplayer.hpp  color.cpp  color.hpp  draw.cpp  draw.hpp  main.cpp  mouse.cpp  mouse.hpp  point.cpp  point.hpp  rect.cpp  rect.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  timer.cpp  timer.hpp  types.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/game/: button.cpp  button.hpp  ctx.cpp  ctx.hpp  drum.cpp  drum.hpp  drums_mgr.cpp  drums_mgr.hpp  game.cpp  game.hpp  istate.cpp  istate.hpp  res_keeper.cpp  res_keeper.hpp  state_idle.cpp  state_idle.hpp  state_machine.cpp  state_machine.hpp  state_result.cpp  state_result.hpp  state_rolling.cpp  state_rolling.hpp  states_common.hpp
